# mood-recognition-yolo

./: .gitignore  README.md  requirements.txt
data/saved_models/: yolov8n-cls-best_1.pt
landmark_embedding/: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
landmark_embedding/scripts/: eval_retrieval.py  prepare_gldv2_small.py  train.py
landmark_embedding/src/landmark_embedding/: __init__.py  data.py  infer.py  losses.py  models.py  train.py
landmark_embedding/tests/: test_smoke.py
resnet/: .gitignore  AGENTS.md  README.md  kaggle.json  pyproject.toml  requirements.txt
resnet/notebooks/: FER2013_Quickstart.ipynb  RAF_DB.ipynb  metrics_per_class.csv
resnet/runs/9/1/: history.csv  history.json
resnet/runs/9/2raf/: history.csv  history.json
resnet/scripts/: eval_classification.py  prepare_fer2013.py  prepare_raf_db.py  train.py
resnet/src/resnet/: __init__.py  data.py  model.py  train.py
resnet/tests/: test_smoke.py
runs/classify/train/: results.csv
runs/classify/train/weights/: best.pt
runs/classify/train3/: args.yaml  results.csv
src/inference/: resnet.py  yolov8.py
src/train/: script.py
yolo_overfitted/images/: train.cache  val  validation.cache
yolo_overfitted/runs/classify/train/: args.yaml
yolo_overfitted/runs/classify/train/weights/: last.pt
yolo_overfitted/runs/classify/train3/weights/: last.pt
yolo_overfitted/src/inference/: yolov8.py
yolo_overfitted/src/train/: script.ipynb  yolov8n.ipynb
